# cfd-practical-lab

./: .gitignore  CMakeLists.txt  cfd_solver.hpp  cfd_solver_MPI.hpp  cfd_tracer_library.hpp  cfd_vtk_library.hpp  endian_converter.hpp  fdm_library.hpp  linalg_vector2d.hpp  main-bfs.cpp  main-karman.cpp  main-mpi.cpp  main-pipe.cpp  main.cpp  mpi_helper.hpp  numerical_vector.hpp  type_safety.hpp  vtk_library.hpp
Blatt 1/: Makefile  blas.c  blas.h  blatt1.c  fields.c  fields.h
